# middleware/validate-user.js
@@ -1,0 +1,22 @@
+const validator = require('../utilities/validate');
+
+const saveUser = (req, res, next) => {
+    const validationRule = {
+        firstName: 'required|string',
+        lastName: 'required|string',
+        email: 'required|email'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+        }else{
+            next();
+        }
+    });
+};
+
+module.exports = {saveUser};
